resolved clipping on header area and selector buttons

--- a/src/client/styles/Header.scss
+++ b/src/client/styles/Header.scss
@@ -7,14 +7,19 @@
   height: 3rem;
   background-color: $grey;
   border-bottom: 1px solid $black;
+  column-gap: 1rem;
 }
 
 .header-store{
-  padding: 0.5rem 8rem;
   border: solid 1px $light-medium-grey;
   border-radius: 5px;
   background-color: $grey;
-  font-size: 1rem;
+  font-size: 0.5rem;
+  flex-basis: 20rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 1.75rem;
 
   h1 {
     margin: 0;
@@ -22,12 +27,8 @@
 }
 
 .header-image-container {
-  position: absolute;
   display: flex;
-  width: 100px;
-  right: 20px;
-  justify-content: space-between;
-  align-items: center;
+  column-gap: 0.75rem;
 
   .icon{
     color: $black;
